# Personnel_api

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/db/: connection.rs  mod.rs
src/db/repositories/: employee_repo.rs  mod.rs  user_repo.rs
src/handlers/: employee_handler.rs  mod.rs  user_handler.rs
src/models/: credentials.rs  department.rs  employee.rs  exams.rs  leave.rs  mod.rs  reference.rs  transfer.rs  user.rs
src/routes/: employee_routes.rs  mod.rs  user_routes.rs
src/services/: employee_services.rs  mod.rs  user_services.rs
